# iana-simple-http

./: Cargo.toml  Makefile.toml  README.md
src/: lib.rs
static/: index.html
