[package]
name = "ianarust"
version = "0.1.0"
edition = "2021"
authors = ["Jaroslaw Cichon <dev.iana.io>"]
description = "IANA SYSTEMS - iana's http simple server systemd implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
yew = "0.17"
wasm-bindgen = "0.2"

